fixed row height issue in css by removing the white-space: pre-wrap from .row

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ textarea {
 }
 
 .row {
-  white-space: pre-wrap;
+  /* white-space: pre-wrap; */
   height: 80px;
 }
 
